--- a/app/src/main/res/layout/activity_shopping_lists.xml
+++ b/app/src/main/res/layout/activity_shopping_lists.xml
@@ -14,6 +14,12 @@
             android:hint="new list name"
         />
 
+    <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/is_shared"
+            android:text="Shared" />
+
     <Button
             android:id="@+id/addList"
             android:layout_width="wrap_content"
